<resources>
    <string name="app_name">News Breeze</string>
    <string name="news_breeze">News Breeze</string>
    <string name="saved_btn">saved_btn</string>
    <string name="filter_btn">filter_btn</string>
    <string name="text">Text</string>
    <string name="text_desc">Text_desc</string>
    <string name="date">Date</string>
    <string name="read_btn">Read</string>
    <string name="save_btn">Save</string>
    <string name="author_name">Author Name</string>
    <string name="news_img">news_img</string>
    <string name="today">Today</string>
    <string name="saved">Saved</string>
    <string name="news_headline">nijfvnefijvnfikvrfijsnhfniavnfjivndfijvndfvijnfvijnfvijdfnvdfijvndfijvndfifjvndvjdffnvdjivndjivndijvndijvnejivneijvnfivnvijnsfvijnfvejnvjivnuhbvuhbefvuhebfvuhebvuhe</string>
    <string name="textview">TextView</string>
    <string name="country">COUNTRY</string>
    <string name="india">India</string>
    <string name="us">US</string>
</resources>