<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/dark_white"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:id="@+id/each"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">

            <FrameLayout

                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/news_image" >

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/news_image" />

                <ImageButton
                    android:id="@+id/savedBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/save_btn_background"
                    app:srcCompat="@drawable/bookmark_icon"
                    android:contentDescription="@string/save_btn"/>

            </FrameLayout>


            <TextView
                android:id="@+id/tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:fontFamily="@font/benneregular"
                android:text="@string/news_headline"
                android:maxLines="3"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <!--            app:shapeAppearanceOverlay="@style/roundImageView"-->


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:maxLines="4"
                android:fontFamily="@font/benneregular"
                android:text="@string/text_desc"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:text="@string/date"
                android:fontFamily="@font/benneregular"
                android:textAllCaps="true"
                android:textColor="#424141"
                android:textSize="19sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/readbutton"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/read_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:backgroundTint="@color/green_200"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/savebutton"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/save_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:backgroundTint="@color/green_200"
                    app:cornerRadius="10dp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider"
        tools:ignore="InefficientWeight" />

</LinearLayout>